// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelFieldLabel > should override label with prop 1`] = `
<DocumentFragment>
  <label
    class="form-label"
    for="dummy"
    id="fieldLabel-dummy"
    label="Dummy Override"
    path="dummy"
  >
    Dummy Override
  </label>
</DocumentFragment>
`;

exports[`ModelFieldLabel > should render label with readable name 1`] = `
<DocumentFragment>
  <label
    class="form-label"
    for="dummy"
    id="fieldLabel-dummy"
    label="Dummy"
    path="dummy"
  >
    Dummy
  </label>
</DocumentFragment>
`;

exports[`ModelFieldLabel > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelFieldLabel > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
